apps/base/pocket-id/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pocket-id
  name: pocket-id
  namespace: pocket-id
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pocket-id
    spec:
      containers:
        - env:
            - name: ANALYTICS_DISABLED
              value: !!str true
          image: ghcr.io/pocket-id/pocket-id:v2.7.0-distroless
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: pocket-id
          ports:
            - containerPort: 1411
              name: http
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - emptyDir: {} # TODO
          name: data
