apps/base/pocket-id/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: pocket-id
  name: pocket-id
  namespace: pocket-id
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 1411
  selector:
    app.kubernetes.io/name: pocket-id
  type: ClusterIP
