apps/base/pocket-id/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/name: pocket-id
  name: pocket-id
  namespace: pocket-id
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`login.example.com`)
      middlewares:
        - name: ip-allowlist
        - name: security-headers
      services:
        - name: pocket-id
          port: 80
  tls:
    secretName: pocket-id-tls
